# lactopy

./: .gitignore  .pre-commit-config.yaml  404.html  DEVELOPMENT.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: automacic_lint_tests_on_merge.yml  automatic_tests_on_merge.yml  deploy.yml  schedule_dependencies.yml
docs/: overview.md  quickstart.ipynb
docs/lactate_models/: OBLA.md
docs/lactate_models/general/: general.md
docs/lactate_models/second_threshold/: dmax.md
lactate_models/OBLA/: index.html
lactate_models/dmax/: index.html
notebooks/data/: big_middle_zone.csv  initial_la_drop.csv  low_anaerobic_reserve.csv  no_base.csv  test.csv  test_2.csv
overview/: index.html
quickstart/: index.html
search/: search_index.json
src/lactopy/: __init__.py
src/lactopy/base/: base.py
src/lactopy/base/adaptors/: __init__.py  cubicAdaptors.py  expAdapter.py  polyAdapter.py
src/lactopy/lactate_models/: __init__.py  base.py  bsln.py  dmax.py  lt1_loglog.py  lt1_lt2_breakpoint.py  lt1_si.py  lt1_si_lowest.py  lt2_breakpoint.py  obla.py
src/lactopy/lactate_models/base/: base.py
src/lactopy/lactate_models/base/adaptors/: cubicAdaptors.py  polyAdapter.py
src/lactopy/lactate_models/general/: OBLA.py
src/lactopy/lactate_models/second_threshold/: dmax.py
src/lactopy/plots/: Dmax.py  base.py  lt1_loglog_plot.py  lt1_lt2_breakpoint_plot.py  lt1_si_lowest_plot.py  lt1_si_plot.py  lt2_breakpoint_plot.py
tests/: test_docs.py  test_obla.py
tests/test_data/: lactate_test_data copy.csv
