[project]
name = "lactopy"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon Dierickx", email = "simon.dierickx@ugent.be" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "diff-cover>=9.7.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.12",
    "mkdocstrings-python>=1.16.10",
    "mktestdocs>=0.2.5",
    "nb-clean>=4.0.1",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
lactopy = { workspace = true }
